attempt to fix backward visibility for safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,7 @@ header {
     display: flex;
     align-items: center; 
     justify-content: center; 
+    -webkit-backface-visibility: hidden;
     overflow: hidden;
     backface-visibility: hidden;
     border-radius: 4px;
